BMERCP/src/SystemVerilog2CTransformation/SystemVerilog2CParser.java
// Generated from E://EclipseWorkspaces//GUIProjectWorkSpace//BMERCP//src//SystemVerilog2CTransformation//SystemVerilog2C.g4 by ANTLR 4.13.1

package SystemVerilog2CTransformation;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SystemVerilog2CParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, CONST=15, TYPEDEF=16, 
		ENUM=17, ELSE=18, CASE=19, DEFAULT=20, BREAK=21, FOR=22, WHILE=23, BEGIN=24, 
		END=25, ENDCASE=26, IF=27, DISPLAY=28, ID=29, INT=30, HEX_INT=31, WS=32, 
		SINGLE_LINE_COMMENT=33, MULTI_LINE_COMMENT=34, STRING=35, CHAR=36, SEMICOLON=37, 
		COLON=38, COMMA=39, DOT=40, LPAREN=41, RPAREN=42, LBRACE=43, RBRACE=44, 
		LBRACK=45, RBRACK=46, EQUAL=47, PLUS=48, PLUSPPLUS=49, MINUS=50, MINUSMINUS=51, 
		MINUSEQUAL=52, PLUSEQUAL=53, EQUALMINUS=54, EQUALPLUS=55, STAR=56, SLASH=57, 
		PERCENT=58, LT=59, GT=60, LE=61, GE=62, EQEQ=63, NOTEQ=64, QUOTE=65, DOLLAR=66, 
		AND=67, OR=68, STARR=69;
	public static final int
		RULE_file = 0, RULE_moduleDecl = 1, RULE_moduleItem = 2, RULE_initialBlock = 3, 
		RULE_enumDecl = 4, RULE_enumList = 5, RULE_functionDecl = 6, RULE_returnType = 7, 
		RULE_parameterList = 8, RULE_parameter = 9, RULE_declaration = 10, RULE_dataType = 11, 
		RULE_statement = 12, RULE_statementTwo = 13, RULE_returnStatement = 14, 
		RULE_assignment = 15, RULE_assignmentType = 16, RULE_indexedID = 17, RULE_functionCall = 18, 
		RULE_argumentList = 19, RULE_argument = 20, RULE_transformedArgument = 21, 
		RULE_dataCastArgument = 22, RULE_bitsArgument = 23, RULE_functionCallID = 24, 
		RULE_ifStatement = 25, RULE_loopStatement = 26, RULE_forLoop = 27, RULE_whileLoop = 28, 
		RULE_switchStatement = 29, RULE_caseBlock = 30, RULE_defaultBlock = 31, 
		RULE_expression = 32, RULE_primary = 33, RULE_operator = 34, RULE_castFunctionCall = 35, 
		RULE_displayStatement = 36, RULE_comment = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "moduleDecl", "moduleItem", "initialBlock", "enumDecl", "enumList", 
			"functionDecl", "returnType", "parameterList", "parameter", "declaration", 
			"dataType", "statement", "statementTwo", "returnStatement", "assignment", 
			"assignmentType", "indexedID", "functionCall", "argumentList", "argument", 
			"transformedArgument", "dataCastArgument", "bitsArgument", "functionCallID", 
			"ifStatement", "loopStatement", "forLoop", "whileLoop", "switchStatement", 
			"caseBlock", "defaultBlock", "expression", "primary", "operator", "castFunctionCall", 
			"displayStatement", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'module'", "'endmodule'", "'initial'", "'logic[1:0]'", "'function'", 
			"'endfunction'", "'void'", "'int'", "'real'", "'logic'", "'byte'", "'return'", 
			"'bits'", "'&'", "'const'", "'typedef'", "'enum'", "'else'", "'case'", 
			"'default'", "'break'", "'for'", "'while'", "'begin'", "'end'", "'endcase'", 
			"'if'", "'$display'", null, null, null, null, null, null, null, null, 
			"';'", "':'", "','", "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"'='", "'+'", "'++'", "'-'", "'--'", "'-='", "'+='", "'=-'", "'=+'", 
			"'*'", "'/'", "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'''", 
			"'$'", "'&&'", "'||'", "'logic[31:0]'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "CONST", "TYPEDEF", "ENUM", "ELSE", "CASE", "DEFAULT", 
			"BREAK", "FOR", "WHILE", "BEGIN", "END", "ENDCASE", "IF", "DISPLAY", 
			"ID", "INT", "HEX_INT", "WS", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", 
			"STRING", "CHAR", "SEMICOLON", "COLON", "COMMA", "DOT", "LPAREN", "RPAREN", 
			"LBRACE", "RBRACE", "LBRACK", "RBRACK", "EQUAL", "PLUS", "PLUSPPLUS", 
			"MINUS", "MINUSMINUS", "MINUSEQUAL", "PLUSEQUAL", "EQUALMINUS", "EQUALPLUS", 
			"STAR", "SLASH", "PERCENT", "LT", "GT", "LE", "GE", "EQEQ", "NOTEQ", 
			"QUOTE", "DOLLAR", "AND", "OR", "STARR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SystemVerilog2C.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SystemVerilog2CParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SystemVerilog2CParser.EOF, 0); }
		public List<ModuleDeclContext> moduleDecl() {
			return getRuleContexts(ModuleDeclContext.class);
		}
		public ModuleDeclContext moduleDecl(int i) {
			return getRuleContext(ModuleDeclContext.class,i);
		}
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2CVisitor ) return ((SystemVerilog2CVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 26722475810L) != 0)) {
				{
				setState(80);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(76);
					moduleDecl();
					}
					break;
				case 2:
					{
					setState(77);
					functionDecl();
					}
					break;
				case 3:
					{
					setState(78);
					declaration();
					}
					break;
				case 4:
					{
					setState(79);
					statement();
					}
					break;
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SystemVerilog2CParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(SystemVerilog2CParser.SEMICOLON, 0); }
		public List<ModuleItemContext> moduleItem() {
			return getRuleContexts(ModuleItemContext.class);
		}
		public ModuleItemContext moduleItem(int i) {
			return getRuleContext(ModuleItemContext.class,i);
		}
		public ModuleDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).enterModuleDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).exitModuleDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2CVisitor ) return ((SystemVerilog2CVisitor<? extends T>)visitor).visitModuleDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleDeclContext moduleDecl() throws RecognitionException {
		ModuleDeclContext _localctx = new ModuleDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moduleDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__0);
			setState(88);
			match(ID);
			setState(89);
			match(SEMICOLON);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 26722541352L) != 0)) {
				{
				{
				setState(90);
				moduleItem();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleItemContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public InitialBlockContext initialBlock() {
			return getRuleContext(InitialBlockContext.class,0);
		}
		public EnumDeclContext enumDecl() {
			return getRuleContext(EnumDeclContext.class,0);
		}
		public ModuleItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).enterModuleItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).exitModuleItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2CVisitor ) return ((SystemVerilog2CVisitor<? extends T>)visitor).visitModuleItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleItemContext moduleItem() throws RecognitionException {
		ModuleItemContext _localctx = new ModuleItemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_moduleItem);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				functionDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				initialBlock();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(102);
				enumDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitialBlockContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(SystemVerilog2CParser.BEGIN, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode END() { return getToken(SystemVerilog2CParser.END, 0); }
		public InitialBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initialBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).enterInitialBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).exitInitialBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2CVisitor ) return ((SystemVerilog2CVisitor<? extends T>)visitor).visitInitialBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitialBlockContext initialBlock() throws RecognitionException {
		InitialBlockContext _localctx = new InitialBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_initialBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__2);
			setState(106);
			match(BEGIN);
			setState(107);
			statement();
			setState(108);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumDeclContext extends ParserRuleContext {
		public TerminalNode TYPEDEF() { return getToken(SystemVerilog2CParser.TYPEDEF, 0); }
		public TerminalNode ENUM() { return getToken(SystemVerilog2CParser.ENUM, 0); }
		public TerminalNode LBRACE() { return getToken(SystemVerilog2CParser.LBRACE, 0); }
		public EnumListContext enumList() {
			return getRuleContext(EnumListContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(SystemVerilog2CParser.RBRACE, 0); }
		public TerminalNode ID() { return getToken(SystemVerilog2CParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(SystemVerilog2CParser.SEMICOLON, 0); }
		public EnumDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).enterEnumDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).exitEnumDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2CVisitor ) return ((SystemVerilog2CVisitor<? extends T>)visitor).visitEnumDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnumDeclContext enumDecl() throws RecognitionException {
		EnumDeclContext _localctx = new EnumDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_enumDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(TYPEDEF);
			setState(111);
			match(ENUM);
			setState(112);
			match(T__3);
			setState(113);
			match(LBRACE);
			setState(114);
			enumList();
			setState(115);
			match(RBRACE);
			setState(116);
			match(ID);
			setState(117);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(SystemVerilog2CParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SystemVerilog2CParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SystemVerilog2CParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SystemVerilog2CParser.COMMA, i);
		}
		public EnumListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).enterEnumList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).exitEnumList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2CVisitor ) return ((SystemVerilog2CVisitor<? extends T>)visitor).visitEnumList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnumListContext enumList() throws RecognitionException {
		EnumListContext _localctx = new EnumListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_enumList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(ID);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(120);
				match(COMMA);
				setState(121);
				match(ID);
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclContext extends ParserRuleContext {
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(SystemVerilog2CParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(SystemVerilog2CParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(SystemVerilog2CParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(SystemVerilog2CParser.SEMICOLON, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).enterFunctionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).exitFunctionDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2CVisitor ) return ((SystemVerilog2CVisitor<? extends T>)visitor).visitFunctionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclContext functionDecl() throws RecognitionException {
		FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__4);
			setState(128);
			returnType();
			setState(129);
			match(ID);
			setState(130);
			match(LPAREN);
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(131);
				parameterList();
				}
				break;
			}
			setState(134);
			match(RPAREN);
			setState(135);
			match(SEMICOLON);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 26722475776L) != 0)) {
				{
				{
				setState(136);
				statement();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnTypeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SystemVerilog2CParser.ID, 0); }
		public ReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).enterReturnType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).exitReturnType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2CVisitor ) return ((SystemVerilog2CVisitor<? extends T>)visitor).visitReturnType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnTypeContext returnType() throws RecognitionException {
		ReturnTypeContext _localctx = new ReturnTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_returnType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 536871808L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterListContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public TerminalNode STARR() { return getToken(SystemVerilog2CParser.STARR, 0); }
		public TerminalNode ID() { return getToken(SystemVerilog2CParser.ID, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SystemVerilog2CParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SystemVerilog2CParser.COMMA, i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2CListener ) ((SystemVerilog2CListener)listener).exitParameterList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2CVisitor ) return ((SystemVerilog2CVisitor<? extends T>)visitor).visitParameterList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameterList);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(146);
					parameter();
					}
					} 
				}
				setState(151);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STARR) {
				{
				setState(152);
				match(STARR);
				}
			}

			setState(156);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(155);
				match(ID);
				}
				break;
			}
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2855616417664L) != 0)) {
				{
				{
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(158);
					match(COMMA);
					}
				}
